# Handwritten-Digit-Classification-with-Neural-Networks

./: .gitignore  README.md  main.py  pyproject.toml
src/hand_written_classification/: __init__.py  config.py  data_loader.py  model_settings.py  trainer.py  utils.py
tests/: test_config.py  test_data_loader.py  test_model_settings.py  test_trainer.py  test_utils.py
