[project]
name = "handwritten-digit-classification-with-neural-networks"
version = "0.1.0"
description = "MNIST handwritten digit classification with neural networks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.21.0",
]

[project.scripts]
hand_written_classification = "hand_written_classification.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hand_written_classification"]